--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-PGHOST=""
-PGDATABASE=""
-PGUSER=""
-PGPASSWORD=""
-PGPORT=""
+PGHOST="viaduct.proxy.rlwy.net"
+PGDATABASE="railway"
+PGUSER="postgres"
+PGPASSWORD="16bDBeBaCd1b61dffbcF3b3d-CBfe5-f"
+PGPORT="56738"
 
 
-PORT=""
+PORT="56738"
 
 API_SECRET="vanicasecret"
 TOKEN_HOUR_LIFESPAN=1
